// ==========================================
// ENUMS (Tipos Enumerados)
// ==========================================

Enum tipo_num {
  CELULAR
  RESIDENCIAL
  COMERCIAL
}

Enum tipo_de_conta {
  PF
  PJ
}

Enum tipo_de_transacao {
  PIX
  TED
  DOC
  ESTORNO
}

Enum tipo_de_status {
  CONCLUIDO
  PENDENTE
  ESTORNADO
  CANCELADO
  FALHOU
}

Enum tipo_chave_pix {
  CPF
  EMAIL
  TELEFONE
  ALEATORIA
}

// ==========================================
// TABELAS
// ==========================================

Table clientes {
  id_cliente integer [pk, increment]
  nome varchar(100) [not null]
  cpf varchar(11) [not null, unique, note: '11 dígitos numéricos / Maior de idade (+18)']
  sexo char(1)
  email varchar(100) [not null, unique]
  senha_hash varchar(255) [not null]
  pin_transacao_hash varchar(255) [not null]
  data_nascimento date [not null]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table telefones {
  id_telefone integer [pk, increment]
  id_cliente integer [not null]
  numero varchar(15) [not null]
  tipo tipo_num [not null, default: 'CELULAR']
}

Table enderecos {
  id_endereco integer [pk, increment]
  id_cliente integer [not null]
  estado varchar(2) [not null]
  cidade varchar(100) [not null]
  bairro varchar(100) [not null]
  rua varchar(150) [not null]
  cep varchar(8) [not null, note: '8 dígitos numéricos']
  num varchar(10) [not null]
}

Table contas {
  id_conta integer [pk, increment]
  id_cliente integer [not null]
  num_conta varchar(20) [not null, unique]
  tipo_conta tipo_de_conta [not null, default: 'PF']
  agencia varchar(10) [not null, default: '0001']
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table saldo_contas {
  id_saldo_conta integer [pk, increment]
  id_conta integer [not null, unique]
  saldo_disponivel decimal(15,2) [not null, note: 'saldo_disponivel >= 0.00']
  saldo_bloqueado decimal(15,2) [not null, default: 0.00]
  ultima_atualizacao timestamp [default: `CURRENT_TIMESTAMP`]
}

Table limites_contas {
  id_limite integer [pk, increment]
  id_conta integer [not null, unique]
  limite_diario decimal(15,2) [not null, default: 5000.00, note: 'limite_diario >= 0.00']
  limite_noturno decimal(15,2) [not null, default: 1000.00, note: 'limite_noturno >= 0.00']
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table chaves_pix {
  id_chave integer [pk, increment]
  id_conta int [not null]
  tipo_chave tipo_chave_pix [not null]
  valor_chave varchar(255) [not null, unique]
  created_at timestamptz [not null, default: `CURRENT_TIMESTAMP`]

  Indexes {
    valor_chave [name: 'idx_chaves_pix_valor']
  }
}

Table transacao {
  id_transacao integer [pk, increment]
  id_conta_origem integer [not null]
  id_conta_destino integer [not null]
  tipo_transacao tipo_de_transacao [not null, default: 'PIX']
  valor decimal(15,2) [not null, note: 'valor > 0.00']
  status tipo_de_status [not null, default: 'CONCLUIDO']
  is_noturno boolean [not null, default: false]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]

  Indexes {
    (id_conta_origem, created_at) [name: 'idx_transacao_origem_data']
    (id_conta_destino, created_at) [name: 'idx_transacao_destino_data']
    (id_conta_origem, status, is_noturno, created_at) [name: 'idx_transacao_limites_janela']
  }
}

// ==========================================
// RELACIONAMENTOS (Foreign Keys)
// ==========================================

Ref: clientes.id_cliente < telefones.id_cliente [delete: cascade]
Ref: clientes.id_cliente < enderecos.id_cliente [delete: cascade]
Ref: clientes.id_cliente < contas.id_cliente [delete: cascade]

Ref: contas.id_conta - saldo_contas.id_conta [delete: cascade]
Ref: contas.id_conta - limites_contas.id_conta [delete: cascade]
Ref: contas.id_conta < chaves_pix.id_conta [delete: cascade]

Ref: contas.id_conta < transacao.id_conta_origem [delete: cascade]
Ref: contas.id_conta < transacao.id_conta_destino [delete: cascade]